# rust-at-night-website

./: .gitignore  Cargo.toml  LICENCE  Makefile.toml  README.md  docker-compose.yaml  justfile  rustfmt.toml  setup.sh
.github/workflows/: main.yml
website-backend/: Cargo.toml  build.rs  justfile
website-backend/.sqlx/: query-7848967b9de1e22dac8c11df19f9982996b475bd46ae6bce5d4cfcb44453b329.json
website-backend/data/: README.md
website-backend/docker/: .dockerignore  Dockerfile  docker_build.sh  docker_build_ci.sh  docker_push_ci.sh  env.sh
website-backend/etc/: litestream.yml
website-backend/migrations/: 20230720001_placeholder.sql
website-backend/scripts/: run.sh
website-backend/src/: api.rs  db.rs  error.rs  lib.rs  main.rs  options.rs  service.rs
website-backend/src/api/: v1.rs
website-backend/src/api/v1/: posts.rs
website-backend/src/data/: post.rs
website-backend/tests/: endpoints.rs
website-backend/tests/common/: mod.rs
website-backend/tests/data/db/: tests_base_seed.sql
website-frontend/: Cargo.toml  Trunk.toml  app.css  index.html  justfile
website-frontend/src/: components.rs  main.rs
website-frontend/src/components/: posts.rs
