[workspace]
resolver = "2"
members = [
  "website-backend",
  "website-frontend"
]

[workspace.dependencies]
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.11"
thiserror = "1"
camino = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
# The new api is complicated and includes features we don't use.
base64 = "=0.13.1"
sha2 = "0.10"
futures = "0.3"
url = "2"
bytes = "1"