[package]
name = "website-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.3"
log = "0.4"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }